// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`\`allCollections\` query 1`] = `
Object {
  "data": Object {
    "allCollections": Object {
      "edges": Array [
        Object {
          "cursor": "0",
          "node": Object {
            "breadcrumbList": Object {
              "itemListElement": Array [
                Object {
                  "item": "/brand",
                  "name": "Brand",
                  "position": 1,
                },
              ],
              "numberOfItems": 1,
            },
            "id": "9280",
            "meta": Object {
              "selectedFacets": Array [
                Object {
                  "key": "brand",
                  "value": "brand",
                },
              ],
            },
            "seo": Object {
              "canonical": "",
              "description": "Brand",
              "title": "Brand",
              "titleTemplate": "",
            },
            "slug": "brand",
            "type": "Brand",
          },
        },
        Object {
          "cursor": "1",
          "node": Object {
            "breadcrumbList": Object {
              "itemListElement": Array [
                Object {
                  "item": "/skechers",
                  "name": "Skechers",
                  "position": 1,
                },
              ],
              "numberOfItems": 1,
            },
            "id": "2000001",
            "meta": Object {
              "selectedFacets": Array [
                Object {
                  "key": "brand",
                  "value": "skechers",
                },
              ],
            },
            "seo": Object {
              "canonical": "",
              "description": "Sport, casual, work, wide, kids' & performance shoes with style, comfort, innovation, quality & value.",
              "title": "Skechers",
              "titleTemplate": "",
            },
            "slug": "skechers",
            "type": "Brand",
          },
        },
        Object {
          "cursor": "2",
          "node": Object {
            "breadcrumbList": Object {
              "itemListElement": Array [
                Object {
                  "item": "/acer",
                  "name": "Acer",
                  "position": 1,
                },
              ],
              "numberOfItems": 1,
            },
            "id": "2000002",
            "meta": Object {
              "selectedFacets": Array [
                Object {
                  "key": "brand",
                  "value": "acer",
                },
              ],
            },
            "seo": Object {
              "canonical": "",
              "description": "Acer laptops, desktops as well as servers and storage, personal digital assistance (PDA), peripherals, peripherals and e-business services for government, business, education, and home users.",
              "title": "Acer",
              "titleTemplate": "",
            },
            "slug": "acer",
            "type": "Brand",
          },
        },
        Object {
          "cursor": "3",
          "node": Object {
            "breadcrumbList": Object {
              "itemListElement": Array [
                Object {
                  "item": "/irobot",
                  "name": "iRobot",
                  "position": 1,
                },
              ],
              "numberOfItems": 1,
            },
            "id": "2000003",
            "meta": Object {
              "selectedFacets": Array [
                Object {
                  "key": "brand",
                  "value": "i-robot",
                },
              ],
            },
            "seo": Object {
              "canonical": "",
              "description": "iRobot, the leading global consumer robot company, designs and builds robots that empower people to do more both inside and outside of the home.",
              "title": "iRobot",
              "titleTemplate": "",
            },
            "slug": "irobot",
            "type": "Brand",
          },
        },
        Object {
          "cursor": "4",
          "node": Object {
            "breadcrumbList": Object {
              "itemListElement": Array [
                Object {
                  "item": "/adidas",
                  "name": "adidas",
                  "position": 1,
                },
              ],
              "numberOfItems": 1,
            },
            "id": "2000004",
            "meta": Object {
              "selectedFacets": Array [
                Object {
                  "key": "brand",
                  "value": "adidas",
                },
              ],
            },
            "seo": Object {
              "canonical": "",
              "description": "adidas shoes, clothing and view new collections for adidas Originals, running, football, soccer, training and much more.",
              "title": "adidas",
              "titleTemplate": "",
            },
            "slug": "adidas",
            "type": "Brand",
          },
        },
      ],
      "pageInfo": Object {
        "endCursor": "4",
        "hasNextPage": true,
        "hasPreviousPage": false,
        "startCursor": "0",
        "totalCount": 17,
      },
    },
  },
}
`;

exports[`\`allProducts\` query 1`] = `
Object {
  "data": Object {
    "allProducts": Object {
      "edges": Array [
        Object {
          "cursor": "0",
          "node": Object {
            "description": "Reprehenderit harum qui odio inventore sit incidunt illo facere.",
            "gtin": "0969910297117",
            "image": Array [
              Object {
                "alternateName": "ab",
                "url": "http://storeframework.vtexassets.com/arquivos/ids/182417/aut.jpg?v=637755531474870000",
              },
            ],
            "isVariantOf": Object {
              "hasVariant": Array [
                Object {
                  "name": "silver",
                  "sku": "18643698",
                },
                Object {
                  "name": "red",
                  "sku": "8665813",
                },
              ],
              "name": "Tasty Granite Towels Tasty",
              "productGroupID": "55127871",
            },
            "name": "silver",
            "offers": Object {
              "highPrice": 44.24,
              "lowPrice": 44.24,
              "offerCount": 1,
              "offers": Array [
                Object {
                  "availability": "https://schema.org/InStock",
                  "itemCondition": "https://schema.org/NewCondition",
                  "itemOffered": Object {
                    "name": "silver",
                    "sku": "18643698",
                  },
                  "listPrice": 69.14,
                  "price": 44.24,
                  "priceCurrency": "",
                  "quantity": 1,
                  "seller": Object {
                    "identifier": "1",
                  },
                  "sellingPrice": 44.24,
                },
              ],
              "priceCurrency": "",
            },
            "productID": "18643698",
            "review": Array [],
            "seo": Object {
              "canonical": "",
              "description": "Reprehenderit harum qui odio inventore sit incidunt illo facere.",
              "title": "Tasty Granite Towels Tasty",
              "titleTemplate": "",
            },
            "sku": "18643698",
            "slug": "tasty-granite-towels-tasty-18643698",
          },
        },
        Object {
          "cursor": "1",
          "node": Object {
            "description": "Reprehenderit harum qui odio inventore sit incidunt illo facere.",
            "gtin": "1918904587371",
            "image": Array [
              Object {
                "alternateName": "eligendi",
                "url": "http://storeframework.vtexassets.com/arquivos/ids/182418/et.jpg?v=637755531489400000",
              },
            ],
            "isVariantOf": Object {
              "hasVariant": Array [
                Object {
                  "name": "silver",
                  "sku": "18643698",
                },
                Object {
                  "name": "red",
                  "sku": "8665813",
                },
              ],
              "name": "Tasty Granite Towels Tasty",
              "productGroupID": "55127871",
            },
            "name": "red",
            "offers": Object {
              "highPrice": 622.79,
              "lowPrice": 622.79,
              "offerCount": 1,
              "offers": Array [
                Object {
                  "availability": "https://schema.org/InStock",
                  "itemCondition": "https://schema.org/NewCondition",
                  "itemOffered": Object {
                    "name": "red",
                    "sku": "8665813",
                  },
                  "listPrice": 949.45,
                  "price": 622.79,
                  "priceCurrency": "",
                  "quantity": 1,
                  "seller": Object {
                    "identifier": "1",
                  },
                  "sellingPrice": 622.79,
                },
              ],
              "priceCurrency": "",
            },
            "productID": "8665813",
            "review": Array [],
            "seo": Object {
              "canonical": "",
              "description": "Reprehenderit harum qui odio inventore sit incidunt illo facere.",
              "title": "Tasty Granite Towels Tasty",
              "titleTemplate": "",
            },
            "sku": "8665813",
            "slug": "tasty-granite-towels-tasty-8665813",
          },
        },
        Object {
          "cursor": "2",
          "node": Object {
            "description": "Iure eum pariatur provident dolorem et.",
            "gtin": "6464716212392",
            "image": Array [
              Object {
                "alternateName": "et",
                "url": "http://storeframework.vtexassets.com/arquivos/ids/168396/nihil.jpg?v=637753027573130000",
              },
              Object {
                "alternateName": "similique",
                "url": "http://storeframework.vtexassets.com/arquivos/ids/168393/dolore.jpg?v=637753027558270000",
              },
              Object {
                "alternateName": "deleniti",
                "url": "http://storeframework.vtexassets.com/arquivos/ids/168394/delectus.jpg?v=637753027564530000",
              },
              Object {
                "alternateName": "sunt",
                "url": "http://storeframework.vtexassets.com/arquivos/ids/168395/qui.jpg?v=637753027568900000",
              },
            ],
            "isVariantOf": Object {
              "hasVariant": Array [
                Object {
                  "name": "plum",
                  "sku": "2737806",
                },
              ],
              "name": "Fantastic Soft Cheese",
              "productGroupID": "43559243",
            },
            "name": "plum",
            "offers": Object {
              "highPrice": 349.12,
              "lowPrice": 349.12,
              "offerCount": 1,
              "offers": Array [
                Object {
                  "availability": "https://schema.org/InStock",
                  "itemCondition": "https://schema.org/NewCondition",
                  "itemOffered": Object {
                    "name": "plum",
                    "sku": "2737806",
                  },
                  "listPrice": 557.57,
                  "price": 349.12,
                  "priceCurrency": "",
                  "quantity": 1,
                  "seller": Object {
                    "identifier": "1",
                  },
                  "sellingPrice": 349.12,
                },
              ],
              "priceCurrency": "",
            },
            "productID": "2737806",
            "review": Array [],
            "seo": Object {
              "canonical": "",
              "description": "Iure eum pariatur provident dolorem et.",
              "title": "Fantastic Soft Cheese",
              "titleTemplate": "",
            },
            "sku": "2737806",
            "slug": "fantastic-soft-cheese-2737806",
          },
        },
        Object {
          "cursor": "3",
          "node": Object {
            "description": "Sed nostrum est nostrum quo ipsum et ut asperiores quasi.",
            "gtin": "4454274563902",
            "image": Array [
              Object {
                "alternateName": "molestiae",
                "url": "http://storeframework.vtexassets.com/arquivos/ids/166870/sit.jpg?v=637753013266530000",
              },
              Object {
                "alternateName": "occaecati",
                "url": "http://storeframework.vtexassets.com/arquivos/ids/166867/ratione.jpg?v=637753013256670000",
              },
              Object {
                "alternateName": "labore",
                "url": "http://storeframework.vtexassets.com/arquivos/ids/166868/modi.jpg?v=637753013260600000",
              },
              Object {
                "alternateName": "qui",
                "url": "http://storeframework.vtexassets.com/arquivos/ids/166869/quaerat.jpg?v=637753013263570000",
              },
            ],
            "isVariantOf": Object {
              "hasVariant": Array [
                Object {
                  "name": "ivory",
                  "sku": "97907082",
                },
              ],
              "name": "Licensed Frozen Sausages",
              "productGroupID": "42751008",
            },
            "name": "ivory",
            "offers": Object {
              "highPrice": 531.54,
              "lowPrice": 531.54,
              "offerCount": 1,
              "offers": Array [
                Object {
                  "availability": "https://schema.org/InStock",
                  "itemCondition": "https://schema.org/NewCondition",
                  "itemOffered": Object {
                    "name": "ivory",
                    "sku": "97907082",
                  },
                  "listPrice": 764.06,
                  "price": 531.54,
                  "priceCurrency": "",
                  "quantity": 1,
                  "seller": Object {
                    "identifier": "1",
                  },
                  "sellingPrice": 531.54,
                },
              ],
              "priceCurrency": "",
            },
            "productID": "97907082",
            "review": Array [],
            "seo": Object {
              "canonical": "",
              "description": "Sed nostrum est nostrum quo ipsum et ut asperiores quasi.",
              "title": "Licensed Frozen Sausages",
              "titleTemplate": "",
            },
            "sku": "97907082",
            "slug": "licensed-frozen-sausages-97907082",
          },
        },
        Object {
          "cursor": "4",
          "node": Object {
            "description": "Laborum non soluta accusamus ut repellat dolorum.",
            "gtin": "2084120969524",
            "image": Array [
              Object {
                "alternateName": "vero",
                "url": "http://storeframework.vtexassets.com/arquivos/ids/169429/deleniti.jpg?v=637753037761670000",
              },
              Object {
                "alternateName": "laborum",
                "url": "http://storeframework.vtexassets.com/arquivos/ids/169428/ratione.jpg?v=637753037756200000",
              },
            ],
            "isVariantOf": Object {
              "hasVariant": Array [
                Object {
                  "name": "violet",
                  "sku": "9938908",
                },
                Object {
                  "name": "silver",
                  "sku": "49950097",
                },
                Object {
                  "name": "lime",
                  "sku": "60500870",
                },
              ],
              "name": "Awesome Plastic Bacon",
              "productGroupID": "35322334",
            },
            "name": "violet",
            "offers": Object {
              "highPrice": 399.58,
              "lowPrice": 399.58,
              "offerCount": 1,
              "offers": Array [
                Object {
                  "availability": "https://schema.org/InStock",
                  "itemCondition": "https://schema.org/NewCondition",
                  "itemOffered": Object {
                    "name": "violet",
                    "sku": "9938908",
                  },
                  "listPrice": 565.29,
                  "price": 399.58,
                  "priceCurrency": "",
                  "quantity": 1,
                  "seller": Object {
                    "identifier": "1",
                  },
                  "sellingPrice": 399.58,
                },
              ],
              "priceCurrency": "",
            },
            "productID": "9938908",
            "review": Array [],
            "seo": Object {
              "canonical": "",
              "description": "Laborum non soluta accusamus ut repellat dolorum.",
              "title": "Awesome Plastic Bacon",
              "titleTemplate": "",
            },
            "sku": "9938908",
            "slug": "awesome-plastic-bacon-9938908",
          },
        },
        Object {
          "cursor": "5",
          "node": Object {
            "description": "Laborum non soluta accusamus ut repellat dolorum.",
            "gtin": "8869428115906",
            "image": Array [
              Object {
                "alternateName": "vitae",
                "url": "http://storeframework.vtexassets.com/arquivos/ids/169433/consequuntur.jpg?v=637753037805300000",
              },
              Object {
                "alternateName": "repellat",
                "url": "http://storeframework.vtexassets.com/arquivos/ids/169432/voluptatibus.jpg?v=637753037800170000",
              },
            ],
            "isVariantOf": Object {
              "hasVariant": Array [
                Object {
                  "name": "violet",
                  "sku": "9938908",
                },
                Object {
                  "name": "silver",
                  "sku": "49950097",
                },
                Object {
                  "name": "lime",
                  "sku": "60500870",
                },
              ],
              "name": "Awesome Plastic Bacon",
              "productGroupID": "35322334",
            },
            "name": "silver",
            "offers": Object {
              "highPrice": 474.77,
              "lowPrice": 474.77,
              "offerCount": 1,
              "offers": Array [
                Object {
                  "availability": "https://schema.org/InStock",
                  "itemCondition": "https://schema.org/NewCondition",
                  "itemOffered": Object {
                    "name": "silver",
                    "sku": "49950097",
                  },
                  "listPrice": 518.11,
                  "price": 474.77,
                  "priceCurrency": "",
                  "quantity": 1,
                  "seller": Object {
                    "identifier": "1",
                  },
                  "sellingPrice": 474.77,
                },
              ],
              "priceCurrency": "",
            },
            "productID": "49950097",
            "review": Array [],
            "seo": Object {
              "canonical": "",
              "description": "Laborum non soluta accusamus ut repellat dolorum.",
              "title": "Awesome Plastic Bacon",
              "titleTemplate": "",
            },
            "sku": "49950097",
            "slug": "awesome-plastic-bacon-49950097",
          },
        },
        Object {
          "cursor": "6",
          "node": Object {
            "description": "Laborum non soluta accusamus ut repellat dolorum.",
            "gtin": "2864754656701",
            "image": Array [
              Object {
                "alternateName": "animi",
                "url": "http://storeframework.vtexassets.com/arquivos/ids/169431/commodi.jpg?v=637753037785770000",
              },
              Object {
                "alternateName": "error",
                "url": "http://storeframework.vtexassets.com/arquivos/ids/169430/sit.jpg?v=637753037781870000",
              },
            ],
            "isVariantOf": Object {
              "hasVariant": Array [
                Object {
                  "name": "violet",
                  "sku": "9938908",
                },
                Object {
                  "name": "silver",
                  "sku": "49950097",
                },
                Object {
                  "name": "lime",
                  "sku": "60500870",
                },
              ],
              "name": "Awesome Plastic Bacon",
              "productGroupID": "35322334",
            },
            "name": "lime",
            "offers": Object {
              "highPrice": 593.17,
              "lowPrice": 593.17,
              "offerCount": 1,
              "offers": Array [
                Object {
                  "availability": "https://schema.org/InStock",
                  "itemCondition": "https://schema.org/NewCondition",
                  "itemOffered": Object {
                    "name": "lime",
                    "sku": "60500870",
                  },
                  "listPrice": 610.36,
                  "price": 593.17,
                  "priceCurrency": "",
                  "quantity": 1,
                  "seller": Object {
                    "identifier": "1",
                  },
                  "sellingPrice": 593.17,
                },
              ],
              "priceCurrency": "",
            },
            "productID": "60500870",
            "review": Array [],
            "seo": Object {
              "canonical": "",
              "description": "Laborum non soluta accusamus ut repellat dolorum.",
              "title": "Awesome Plastic Bacon",
              "titleTemplate": "",
            },
            "sku": "60500870",
            "slug": "awesome-plastic-bacon-60500870",
          },
        },
        Object {
          "cursor": "7",
          "node": Object {
            "description": "Aut omnis nobis tenetur.",
            "gtin": "1346198062637",
            "image": Array [
              Object {
                "alternateName": "et",
                "url": "http://storeframework.vtexassets.com/arquivos/ids/186495/corporis.jpg?v=637755567185370000",
              },
              Object {
                "alternateName": "in",
                "url": "http://storeframework.vtexassets.com/arquivos/ids/186492/qui.jpg?v=637755567174570000",
              },
              Object {
                "alternateName": "consectetur",
                "url": "http://storeframework.vtexassets.com/arquivos/ids/186493/possimus.jpg?v=637755567178470000",
              },
              Object {
                "alternateName": "ea",
                "url": "http://storeframework.vtexassets.com/arquivos/ids/186494/nihil.jpg?v=637755567181900000",
              },
            ],
            "isVariantOf": Object {
              "hasVariant": Array [
                Object {
                  "name": "fuchsia",
                  "sku": "64953394",
                },
              ],
              "name": "Unbranded Concrete Table Small",
              "productGroupID": "29913569",
            },
            "name": "fuchsia",
            "offers": Object {
              "highPrice": 200.64,
              "lowPrice": 200.64,
              "offerCount": 1,
              "offers": Array [
                Object {
                  "availability": "https://schema.org/InStock",
                  "itemCondition": "https://schema.org/NewCondition",
                  "itemOffered": Object {
                    "name": "fuchsia",
                    "sku": "64953394",
                  },
                  "listPrice": 297.7,
                  "price": 200.64,
                  "priceCurrency": "",
                  "quantity": 1,
                  "seller": Object {
                    "identifier": "1",
                  },
                  "sellingPrice": 200.64,
                },
              ],
              "priceCurrency": "",
            },
            "productID": "64953394",
            "review": Array [],
            "seo": Object {
              "canonical": "",
              "description": "Aut omnis nobis tenetur.",
              "title": "Unbranded Concrete Table Small",
              "titleTemplate": "",
            },
            "sku": "64953394",
            "slug": "unbranded-concrete-table-small-64953394",
          },
        },
      ],
      "pageInfo": Object {
        "endCursor": "5348",
        "hasNextPage": true,
        "hasPreviousPage": false,
        "startCursor": "0",
        "totalCount": 5348,
      },
    },
  },
}
`;

exports[`\`collection\` query 1`] = `
Object {
  "data": Object {
    "collection": Object {
      "breadcrumbList": Object {
        "itemListElement": Array [
          Object {
            "item": "/office",
            "name": "Office",
            "position": 1,
          },
          Object {
            "item": "/office/desks",
            "name": "Desks",
            "position": 2,
          },
        ],
        "numberOfItems": 2,
      },
      "id": "9295",
      "meta": Object {
        "selectedFacets": Array [
          Object {
            "key": "category-1",
            "value": "office",
          },
          Object {
            "key": "category-2",
            "value": "desks",
          },
        ],
      },
      "seo": Object {
        "canonical": "",
        "description": "Desks for better productivity",
        "title": "Desks",
        "titleTemplate": "",
      },
      "slug": "Office/Desks",
      "type": "Category",
    },
  },
}
`;

exports[`\`product\` query 1`] = `
Object {
  "data": Object {
    "product": Object {
      "additionalProperty": Array [],
      "aggregateRating": Object {
        "ratingValue": 5,
        "reviewCount": 0,
      },
      "brand": Object {
        "name": "Brand",
      },
      "breadcrumbList": Object {
        "itemListElement": Array [
          Object {
            "item": "/office",
            "name": "Office",
            "position": 1,
          },
          Object {
            "item": "/office/desks",
            "name": "Desks",
            "position": 2,
          },
          Object {
            "item": "/unbranded-concrete-table-small-64953394/p",
            "name": "Unbranded Concrete Table Small",
            "position": 3,
          },
        ],
      },
      "description": "Aut omnis nobis tenetur.",
      "gtin": "1346198062637",
      "image": Array [
        Object {
          "alternateName": "et",
          "url": "http://storeframework.vtexassets.com/arquivos/ids/186495/corporis.jpg?v=637755567185370000",
        },
        Object {
          "alternateName": "in",
          "url": "http://storeframework.vtexassets.com/arquivos/ids/186492/qui.jpg?v=637755567174570000",
        },
        Object {
          "alternateName": "consectetur",
          "url": "http://storeframework.vtexassets.com/arquivos/ids/186493/possimus.jpg?v=637755567178470000",
        },
        Object {
          "alternateName": "ea",
          "url": "http://storeframework.vtexassets.com/arquivos/ids/186494/nihil.jpg?v=637755567181900000",
        },
      ],
      "isVariantOf": Object {
        "hasVariant": Array [
          Object {
            "name": "fuchsia",
            "productID": "64953394",
            "slug": "unbranded-concrete-table-small-64953394",
          },
        ],
      },
      "name": "fuchsia",
      "offers": Object {
        "highPrice": 200.64,
        "lowPrice": 200.64,
        "offerCount": 1,
        "priceCurrency": "",
      },
      "productID": "64953394",
      "review": Array [],
      "seo": Object {
        "canonical": "",
        "description": "Aut omnis nobis tenetur.",
        "title": "Unbranded Concrete Table Small",
        "titleTemplate": "",
      },
      "sku": "64953394",
      "slug": "unbranded-concrete-table-small-64953394",
    },
  },
}
`;

exports[`\`search\` query 1`] = `
Object {
  "data": Object {
    "search": Object {
      "facets": Array [
        Object {
          "key": "preco",
          "label": "Preço",
          "type": "RANGE",
          "values": Array [
            Object {
              "label": "unknown",
              "quantity": 646,
              "selected": false,
              "value": "*-to-150",
            },
            Object {
              "label": "unknown",
              "quantity": 601,
              "selected": false,
              "value": "360-to-*",
            },
            Object {
              "label": "unknown",
              "quantity": 579,
              "selected": false,
              "value": "150-to-360",
            },
          ],
        },
        Object {
          "key": "categoria",
          "label": "Categoria",
          "type": "BOOLEAN",
          "values": Array [
            Object {
              "label": "Chairs",
              "quantity": 951,
              "selected": false,
              "value": "chairs",
            },
            Object {
              "label": "Desks",
              "quantity": 875,
              "selected": false,
              "value": "desks",
            },
          ],
        },
        Object {
          "key": "marca",
          "label": "Marca",
          "type": "BOOLEAN",
          "values": Array [
            Object {
              "label": "Acer",
              "quantity": 263,
              "selected": false,
              "value": "acer",
            },
            Object {
              "label": "adidas",
              "quantity": 231,
              "selected": false,
              "value": "adidas",
            },
            Object {
              "label": "BLACK+DECKER",
              "quantity": 254,
              "selected": false,
              "value": "black-decker",
            },
            Object {
              "label": "Brand",
              "quantity": 239,
              "selected": false,
              "value": "brand",
            },
            Object {
              "label": "iRobot",
              "quantity": 284,
              "selected": false,
              "value": "irobot",
            },
            Object {
              "label": "Nike",
              "quantity": 285,
              "selected": false,
              "value": "nike",
            },
            Object {
              "label": "Skechers",
              "quantity": 270,
              "selected": false,
              "value": "skechers",
            },
          ],
        },
      ],
      "products": Object {
        "edges": Array [
          Object {
            "cursor": "0",
            "node": Object {
              "additionalProperty": Array [],
              "aggregateRating": Object {
                "ratingValue": 5,
                "reviewCount": 0,
              },
              "brand": Object {
                "name": "Nike",
              },
              "description": "Reprehenderit harum qui odio inventore sit incidunt illo facere.",
              "gtin": "0969910297117",
              "image": Array [
                Object {
                  "alternateName": "ab",
                  "url": "http://storeframework.vtexassets.com/arquivos/ids/182417/aut.jpg?v=637755531474870000",
                },
              ],
              "isVariantOf": Object {
                "additionalProperty": Array [],
                "hasVariant": Array [
                  Object {
                    "name": "silver",
                    "productID": "18643698",
                    "sku": "18643698",
                    "slug": "tasty-granite-towels-tasty-18643698",
                  },
                  Object {
                    "name": "red",
                    "productID": "8665813",
                    "sku": "8665813",
                    "slug": "tasty-granite-towels-tasty-8665813",
                  },
                ],
                "name": "Tasty Granite Towels Tasty",
                "productGroupID": "55127871",
              },
              "name": "silver",
              "offers": Object {
                "highPrice": 44.24,
                "lowPrice": 44.24,
                "offerCount": 1,
                "offers": Array [
                  Object {
                    "availability": "https://schema.org/InStock",
                    "itemCondition": "https://schema.org/NewCondition",
                    "itemOffered": Object {
                      "seo": Object {
                        "canonical": "",
                        "description": "Reprehenderit harum qui odio inventore sit incidunt illo facere.",
                        "title": "Tasty Granite Towels Tasty",
                        "titleTemplate": "",
                      },
                    },
                    "listPrice": 69.14,
                    "price": 44.24,
                    "quantity": 1,
                    "seller": Object {
                      "identifier": "1",
                    },
                    "sellingPrice": 44.24,
                  },
                ],
                "priceCurrency": "",
              },
              "productID": "18643698",
              "review": Array [],
              "sku": "18643698",
              "slug": "tasty-granite-towels-tasty-18643698",
            },
          },
          Object {
            "cursor": "1",
            "node": Object {
              "additionalProperty": Array [],
              "aggregateRating": Object {
                "ratingValue": 5,
                "reviewCount": 0,
              },
              "brand": Object {
                "name": "iRobot",
              },
              "description": "Sed nostrum est nostrum quo ipsum et ut asperiores quasi.",
              "gtin": "4454274563902",
              "image": Array [
                Object {
                  "alternateName": "molestiae",
                  "url": "http://storeframework.vtexassets.com/arquivos/ids/166870/sit.jpg?v=637753013266530000",
                },
                Object {
                  "alternateName": "occaecati",
                  "url": "http://storeframework.vtexassets.com/arquivos/ids/166867/ratione.jpg?v=637753013256670000",
                },
                Object {
                  "alternateName": "labore",
                  "url": "http://storeframework.vtexassets.com/arquivos/ids/166868/modi.jpg?v=637753013260600000",
                },
                Object {
                  "alternateName": "qui",
                  "url": "http://storeframework.vtexassets.com/arquivos/ids/166869/quaerat.jpg?v=637753013263570000",
                },
              ],
              "isVariantOf": Object {
                "additionalProperty": Array [],
                "hasVariant": Array [
                  Object {
                    "name": "ivory",
                    "productID": "97907082",
                    "sku": "97907082",
                    "slug": "licensed-frozen-sausages-97907082",
                  },
                ],
                "name": "Licensed Frozen Sausages",
                "productGroupID": "42751008",
              },
              "name": "ivory",
              "offers": Object {
                "highPrice": 531.54,
                "lowPrice": 531.54,
                "offerCount": 1,
                "offers": Array [
                  Object {
                    "availability": "https://schema.org/InStock",
                    "itemCondition": "https://schema.org/NewCondition",
                    "itemOffered": Object {
                      "seo": Object {
                        "canonical": "",
                        "description": "Sed nostrum est nostrum quo ipsum et ut asperiores quasi.",
                        "title": "Licensed Frozen Sausages",
                        "titleTemplate": "",
                      },
                    },
                    "listPrice": 764.06,
                    "price": 531.54,
                    "quantity": 1,
                    "seller": Object {
                      "identifier": "1",
                    },
                    "sellingPrice": 531.54,
                  },
                ],
                "priceCurrency": "",
              },
              "productID": "97907082",
              "review": Array [],
              "sku": "97907082",
              "slug": "licensed-frozen-sausages-97907082",
            },
          },
          Object {
            "cursor": "2",
            "node": Object {
              "additionalProperty": Array [],
              "aggregateRating": Object {
                "ratingValue": 5,
                "reviewCount": 0,
              },
              "brand": Object {
                "name": "Brand",
              },
              "description": "Aut omnis nobis tenetur.",
              "gtin": "1346198062637",
              "image": Array [
                Object {
                  "alternateName": "et",
                  "url": "http://storeframework.vtexassets.com/arquivos/ids/186495/corporis.jpg?v=637755567185370000",
                },
                Object {
                  "alternateName": "in",
                  "url": "http://storeframework.vtexassets.com/arquivos/ids/186492/qui.jpg?v=637755567174570000",
                },
                Object {
                  "alternateName": "consectetur",
                  "url": "http://storeframework.vtexassets.com/arquivos/ids/186493/possimus.jpg?v=637755567178470000",
                },
                Object {
                  "alternateName": "ea",
                  "url": "http://storeframework.vtexassets.com/arquivos/ids/186494/nihil.jpg?v=637755567181900000",
                },
              ],
              "isVariantOf": Object {
                "additionalProperty": Array [],
                "hasVariant": Array [
                  Object {
                    "name": "fuchsia",
                    "productID": "64953394",
                    "sku": "64953394",
                    "slug": "unbranded-concrete-table-small-64953394",
                  },
                ],
                "name": "Unbranded Concrete Table Small",
                "productGroupID": "29913569",
              },
              "name": "fuchsia",
              "offers": Object {
                "highPrice": 200.64,
                "lowPrice": 200.64,
                "offerCount": 1,
                "offers": Array [
                  Object {
                    "availability": "https://schema.org/InStock",
                    "itemCondition": "https://schema.org/NewCondition",
                    "itemOffered": Object {
                      "seo": Object {
                        "canonical": "",
                        "description": "Aut omnis nobis tenetur.",
                        "title": "Unbranded Concrete Table Small",
                        "titleTemplate": "",
                      },
                    },
                    "listPrice": 297.7,
                    "price": 200.64,
                    "quantity": 1,
                    "seller": Object {
                      "identifier": "1",
                    },
                    "sellingPrice": 200.64,
                  },
                ],
                "priceCurrency": "",
              },
              "productID": "64953394",
              "review": Array [],
              "sku": "64953394",
              "slug": "unbranded-concrete-table-small-64953394",
            },
          },
          Object {
            "cursor": "3",
            "node": Object {
              "additionalProperty": Array [],
              "aggregateRating": Object {
                "ratingValue": 5,
                "reviewCount": 0,
              },
              "brand": Object {
                "name": "Brand",
              },
              "description": "Aliquam rerum dignissimos ex soluta est cumque.",
              "gtin": "8718443313149",
              "image": Array [
                Object {
                  "alternateName": "itaque",
                  "url": "http://storeframework.vtexassets.com/arquivos/ids/178893/nam.jpg?v=637755498809500000",
                },
                Object {
                  "alternateName": "voluptatem",
                  "url": "http://storeframework.vtexassets.com/arquivos/ids/178892/quae.jpg?v=637755498804330000",
                },
              ],
              "isVariantOf": Object {
                "additionalProperty": Array [],
                "hasVariant": Array [
                  Object {
                    "name": "lime",
                    "productID": "85095548",
                    "sku": "85095548",
                    "slug": "small-concrete-tuna-incredible-85095548",
                  },
                ],
                "name": "Small Concrete Tuna Incredible",
                "productGroupID": "32789477",
              },
              "name": "lime",
              "offers": Object {
                "highPrice": 650.86,
                "lowPrice": 650.86,
                "offerCount": 1,
                "offers": Array [
                  Object {
                    "availability": "https://schema.org/InStock",
                    "itemCondition": "https://schema.org/NewCondition",
                    "itemOffered": Object {
                      "seo": Object {
                        "canonical": "",
                        "description": "Aliquam rerum dignissimos ex soluta est cumque.",
                        "title": "Small Concrete Tuna Incredible",
                        "titleTemplate": "",
                      },
                    },
                    "listPrice": 968.3,
                    "price": 650.86,
                    "quantity": 1,
                    "seller": Object {
                      "identifier": "1",
                    },
                    "sellingPrice": 650.86,
                  },
                ],
                "priceCurrency": "",
              },
              "productID": "85095548",
              "review": Array [],
              "sku": "85095548",
              "slug": "small-concrete-tuna-incredible-85095548",
            },
          },
          Object {
            "cursor": "4",
            "node": Object {
              "additionalProperty": Array [],
              "aggregateRating": Object {
                "ratingValue": 5,
                "reviewCount": 0,
              },
              "brand": Object {
                "name": "Acer",
              },
              "description": "In aut dolor perferendis voluptatibus hic dolores.",
              "gtin": "8985861454535",
              "image": Array [
                Object {
                  "alternateName": "labore",
                  "url": "http://storeframework.vtexassets.com/arquivos/ids/170491/vero.jpg?v=637753049086730000",
                },
              ],
              "isVariantOf": Object {
                "additionalProperty": Array [],
                "hasVariant": Array [
                  Object {
                    "name": "sky blue",
                    "productID": "68237302",
                    "sku": "68237302",
                    "slug": "refined-metal-computer-68237302",
                  },
                  Object {
                    "name": "cyan",
                    "productID": "35445133",
                    "sku": "35445133",
                    "slug": "refined-metal-computer-35445133",
                  },
                ],
                "name": "Refined Metal Computer",
                "productGroupID": "70710833",
              },
              "name": "sky blue",
              "offers": Object {
                "highPrice": 253.07,
                "lowPrice": 253.07,
                "offerCount": 1,
                "offers": Array [
                  Object {
                    "availability": "https://schema.org/InStock",
                    "itemCondition": "https://schema.org/NewCondition",
                    "itemOffered": Object {
                      "seo": Object {
                        "canonical": "",
                        "description": "In aut dolor perferendis voluptatibus hic dolores.",
                        "title": "Refined Metal Computer",
                        "titleTemplate": "",
                      },
                    },
                    "listPrice": 388.35,
                    "price": 253.07,
                    "quantity": 1,
                    "seller": Object {
                      "identifier": "1",
                    },
                    "sellingPrice": 253.07,
                  },
                ],
                "priceCurrency": "",
              },
              "productID": "68237302",
              "review": Array [],
              "sku": "68237302",
              "slug": "refined-metal-computer-68237302",
            },
          },
        ],
        "pageInfo": Object {
          "endCursor": "1826",
          "hasNextPage": true,
          "hasPreviousPage": false,
          "startCursor": "0",
          "totalCount": 1826,
        },
      },
    },
  },
}
`;
